--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,6 @@
 anyio==3.6.2
+boto3==1.26.3
+botocore==1.29.3
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
@@ -10,13 +12,16 @@ httptools==0.5.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jmespath==1.0.1
 MarkupSafe==2.1.1
 orjson==3.8.1
 pydantic==1.10.2
+python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-multipart==0.0.5
 PyYAML==6.0
 requests==2.28.1
+s3transfer==0.6.0
 six==1.16.0
 sniffio==1.3.0
 starlette==0.20.4
