--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.6.2
+attrs==22.1.0
 boto3==1.26.3
 botocore==1.29.3
 certifi==2022.9.24
@@ -6,16 +7,22 @@ charset-normalizer==2.1.1
 click==8.1.3
 dnspython==2.2.1
 email-validator==1.3.0
+exceptiongroup==1.0.1
 fastapi==0.86.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 MarkupSafe==2.1.1
 orjson==3.8.1
+packaging==21.3
+pluggy==1.0.0
 pydantic==1.10.2
+pyparsing==3.0.9
+pytest==7.2.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-multipart==0.0.5
@@ -25,6 +32,7 @@ s3transfer==0.6.0
 six==1.16.0
 sniffio==1.3.0
 starlette==0.20.4
+tomli==2.0.1
 typing_extensions==4.4.0
 ujson==5.5.0
 urllib3==1.26.12
