Makefile: testタスクを追加

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,3 +1,5 @@
+.PHONY: test
+
 run:
 	uvicorn main:app --reload
 
@@ -6,3 +8,6 @@ save:
 
 install:
 	pip install -r requirements.txt
+
+test:
+	PYTHONPATH=$(CURDIR) pytest -s test
