--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,6 +23,7 @@ pluggy==1.0.0
 pydantic==1.10.2
 pyparsing==3.0.9
 pytest==7.2.0
+pytest-mock==3.10.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-multipart==0.0.5
