--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.29.3
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==8.1.3
+coverage==6.5.0
 dnspython==2.2.1
 email-validator==1.3.0
 exceptiongroup==1.0.1
@@ -23,6 +24,7 @@ pluggy==1.0.0
 pydantic==1.10.2
 pyparsing==3.0.9
 pytest==7.2.0
+pytest-cov==4.0.0
 pytest-mock==3.10.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
