--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -25,3 +25,9 @@ jobs:
         run: |
           cd backend
           make test
+
+      - name: upload coverage to codecov
+        if: github.ref == 'refs/heads/main'
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
