--- a/backend/Makefile
+++ b/backend/Makefile
@@ -10,4 +10,7 @@ install:
 	pip install -r requirements.txt
 
 test:
+	PYTHONPATH=$(CURDIR) pytest -m"not aws" --cov --cov-report=xml -s .
+
+test-all:
 	PYTHONPATH=$(CURDIR) pytest --cov --cov-report=xml -s .
